@@ -120,59 +120,59 @@
                 </domain>
             </translation-domains>
             <documents>
-                <document>
+                <document base="accessx-status">
         	  <directory>accessx-status/docs</directory>
         	  <_description>AccessX Status Manual</_description>
                 </document>
-                <document>
+                <document base="battstat">
         	  <directory>battstat/docs</directory>
         	  <_description>Battery Status Manual</_description>
                 </document>
-                <document>
+                <document base="charpick">
         	  <directory>charpick/help</directory>
         	  <_description>Character Picker Manual</_description>
                 </document>
-                <document>
+                <document base="cpufreq">
         	  <directory>cpufreq/help</directory>
         	  <_description>CPU Frequency Monitor Manual</_description>
                 </document>
-                <document>
+                <document base="drivemount">
         	  <directory>drivemount/help</directory>
         	  <_description>Drive Mounter Manual</_description>
                 </document>
-                <document>
+                <document base="geyes">
         	  <directory>geyes/docs</directory>
         	  <_description>GEyes Manual</_description>
                 </document>
-                <document>
+                <document base="gswitchit">
         	  <directory>gswitchit/help</directory>
         	  <_description>Keyboard Preferences Manual</_description>
                 </document>
-                <document>
+                <document base="gtik">
         	  <directory>gtik/help</directory>
         	  <_description>Stock Ticker Manual</_description>
                 </document>
-                <document>
+                <document base="gweather">
         	  <directory>gweather/docs</directory>
         	  <_description>Weather Applet Manual</_description>
                 </document>
-                <document>
+                <document base="mini-commander">
         	  <directory>mini-commander/help</directory>
         	  <_description>Mini Commander Manual</_description>
                 </document>
-                <document>
+                <document base="mixer">
         	  <directory>mixer/docs</directory>
         	  <_description>Sound Mixer Manual</_description>
                 </document>
-                <document>
+                <document base="system-monitor">
         	  <directory>multiload/docs</directory>
         	  <_description>System Monitor Manual</_description>
                 </document>
-                <document>
+                <document base="stickynotes">
         	  <directory>stickynotes/docs</directory>
         	  <_description>Sticky Notes Manual</_description>
                 </document>
-                <document>
+                <document base="trash">
         	  <directory>trashapplet/docs</directory>
         	  <_description>Trash Manual</_description>
                 </document>
