@@ -21,7 +21,7 @@
     <module id="glib"/>
     <module id="gnome-vfs"/>
     <module id="gtk+" branch="gtk-2-8"/>
-    <module id="libbonobo"/>
+    <module id="libbonobo" branch="gnome-2-14" />
     <module id="libbonoboui"/>
     <module id="libgnome"/>
     <module id="libgnomecanvas"/>
