@@ -1,5 +1,11 @@
 2006-03-11  Danilo Šegan  <danilo@gnome.org>
 
+	* gnome-modules.xml.in: Add base tags.
+
+	* releases.xml.in: Branch libbonobo.
+
+2006-03-11  Danilo Šegan  <danilo@gnome.org>
+
 	* releases.xml.in: Fix modules.
 
 	* gnome-modules.xml.in: Added gnome-applets, sabayon, pesselus.
